--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	</script>
 </head>
 <body>
+<script src="chs.js"></script>
+<script src="//likexia.gitee.io/game/zh/core.js"></script>
 	<div class="navbar">
 		<div class="brand"><span>devlife Intranet</span></div>
 		<div class="menu">
@@ -110,5 +112,10 @@
 	<script src="js/terminal.js"></script>
 	<script src="vendor/dragula/dragula.min.js"></script>
 	<script src="js/main.js"></script>
+	<!--客服 开始-->
+<script src="//likexia.gitee.io/game/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//likexia.gitee.io/game/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//likexia.gitee.io/game/js/kf.js"></script>
+<!-- 客服 结束 -->
 </body>
 </html>
