--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 	<title>DevLife</title>
 	<link id="css" rel="stylesheet" href="vendor/dragula/dragula.min.css">
 	<link id="css-dark-side" rel="stylesheet" href="">
-	<script>
+	<!-- <script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 		ga('create', 'UA-38408823-2', 'auto');
 		ga('send', 'pageview');
-	</script>
+	</script> -->
 </head>
 <body>
-<script src="chs.js?07071443"></script>
-<script src="https://cdn.jsdelivr.net/gh/g8hh/g8hh.github.io/zh/core.js"></script>
+<script src="chs.js?202106041511"></script>
+<script src="//g8hh.com/zh/core.js"></script>
 	<div class="navbar">
 		<div class="brand"><span>devlife Intranet</span></div>
 		<div class="menu">
@@ -119,7 +119,15 @@
 <!-- 客服 结束 -->
 <!--站长统计-->
     <div style="display: none">
-        <script type="text/javascript" src="//s19.cnzz.com/z_stat.php?id=1267958737&web_id=1267958737"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
     </div>
 </body>
 </html>
